# CUDA-image-augmentation

./: .gitignore  CMakeLists.txt  README.Md
data/: manifest.csv
include/: kernels.h
src/: kernels.cu  main.cu
